--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+certifi==2021.5.30
 click==8.0.1
+cloudinary==1.26.0
 Flask==2.0.1
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 psycopg2-binary==2.9.1
+six==1.16.0
+urllib3==1.26.5
 Werkzeug==2.0.1
